# cuDFNsys

./: .gitignore  CITATION.cff  GUIStochasticFracs.csv  Path.mk  README.md  RemoveCompileFiles.sh
BenchmarkCases/: CMakeLists.txt
BenchmarkCases/src/: main.cu
ClearBadH5FileForPercolationTest/: CMakeLists.txt  compileCode.sh
ClearBadH5FileForPercolationTest/src/: main.cu
CodingGuideline/: main.aux  main.tex  main.toc
ColumnLikeDomainForDispersion/: CMakeLists.txt  Makefile
ColumnLikeDomainForDispersion/src/: ColumnLikeDomainForDispersion.cu
CompareCPUGPU/: CMakeLists.txt  compileCode.sh
CompareCPUGPU/MatlabScript/: main.m
CompareCPUGPU/src/: main_CPU_check_DFNgen.cu  main_CPU_check_MHFEM_Triplet.cu  main_GPU_check_MHFEM_Triplet.cu
CompareWithAndWithoutDeadEnds/src/: main.cu
CompilationTest/: Makefile
CompilationTest/src/: CompilationTest.cu
ConnectivityMultipleFamilies/: CMakeLists.txt
ContinueParticleTransport/: A_FBT.m  CMakeLists.txt  Makefile
ContinueParticleTransport/PythonScript/: ShowMSD.m
ContinueParticleTransport/SomeScript/: CMakeLists.txt  Dispersion_Coe.m  GetFPT.m  OverwriteData.py  ShowMSD.m  compileCode.sh
ContinueParticleTransport/src/: ContinueParticleTransport.cu  main.cu
ConvertH5Precision/: CMakeLists.txt
DispersionAtOneDensityValue/scripts/: CheckCpuGpuNodesResources.sh  CheckExe.sh  CheckHowManyParticlesIn.sh  GetTravelTime_Displacement_Data.m  Run.sh  Run_Pe.sh
DispersionAtOneDensityValue/src/: DispersionAtOneDensityValue.cu
Dispersion_Rho_increasing/: Makefile
Dispersion_Rho_increasing/scripts/: AmendMSDData.py  DelDataSet.py
Dispersion_Rho_increasing/src/: DispersionAtOneDensityValue.cu  Dispersion_Rho_increasing.cu
FlowchartSoluteTransport/: main.aux  main.tex  main.toc
FracturesFixedChangeDomainSize/: A_FBT.m
FracturesFixedChangeDomainSize/src/: main.cu
GUI/: DeterministicFracs.csv  Makefile  StochasticFracs.csv  cuDFNsysGUI.py
GUI/scripts/: Check_ClassH5_Warning_log.py
GUI/src/: DFN_Gen.cu  DFN_PT.cu  GUI.py  MCIterations.cu  cuDFNsysGUI.py
GenMultipleFamilies/src/: main.cu
IdenticalDFNDifferentPe/: log.txt
IdenticalDFNDifferentPe/scripts/: CheckIntersectionOnTrace.m  MHFEM_1_test.m
IdenticalDFNDifferentPe/src/: IdenticalDFNDifferentPe.cu
Manual/: Manual.md
MatlabScript_GenFracs/: ChangeConductivity.m  DFN_VISUAL.m  DFN_VISUAL.py  ExcludedVolume.m  ExcludedVolume_II.m  Fractures.h5  Fractures_new.h5  MatlabScript_GenFracs.m  SitePercolation.m  StochasticDFN.csv  TestFisher.m
MatlabScript_GenFracs/MultipleGroups/: CalculateTotalDimensionlessDensityOutputCommands.m
MatlabScript_GenFracs/Quaternion/: Quaternion_Rotation.m
Modules/: FindCGAL.cmake  FindDeps.cmake  FindEIGEN.cmake  FindGMSH.cmake  FindMATLAB.cmake  FindUMFPACK.cmake
ParticleTrackingFourFrac/: compileCode.sh
ParticleTrackingFourFrac/MATLAB_SCRIPT/: TravelTime.m
ParticleTrackingFourFrac/src/: main.cu
ParticleTransportValidationSingleFrac/src/: main.cu
PercolationAnisotropicCases/: Makefile
PercolationTest/src/: main.cu
QuickStartGuide/: CMakeLists.txt  Flow_parameters.csv  InputParametersForDeterministicDFN.csv  InputParametersForStochasticDFN.csv  Makefile  Mesh_parameters.csv  PT_parameters.csv  compileCode.sh  log.txt
QuickStartGuide/src/: QuickStartGuide.cu  QuickStartGuide_DFN_I.cu  QuickStartGuide_DFN_III_FLOW.cu  QuickStartGuide_DFN_II_MESH.cu  QuickStartGuide_DFN_IV_PT.cu  QuickStartGuide_DFN_I_DFN.cu  QuickStartGuide_I.cu  QuickStartGuide_II.cu  QuickStartGuide_III.cu  QuickStartGuide_IV.cu  QuickStartGuide_new.cu  ReRunPT.cu  main.cu
ReadMatAndOutputH5/: CMakeLists.txt
ReadMatAndOutputH5/src/: main.cu
ReadObjectsAndDebug/Matlab_debug/: Lengt_of_trajectory.m  Show_partial_mesh.m  Show_problematic_elementTag.m  show_critical_mesh.m
ReadObjectsAndDebug/src/: main.cu
SomeApplications/AnisotropicConnectivityAnalysis/: StochasticDFN.csv
SomeApplications/AnisotropicConnectivityAnalysis_test/: run.sh
SomeApplications/AnisotropicPermeabilityAnalysis/: Makefile
SomeApplications/AnisotropicPermeability_GetData/: AssembleData.py  StoreAndDelteHDF5.py
SomeApplications/AnisotropicPermeability_X/: Makefile
SomeApplications/AnisotropicPermeability_Y/: Makefile
SomeApplications/BenchmarkCases/: Makefile
SomeApplications/CircuitLikeDFNDispersion/: Flow_parameters.csv  InputParametersForDeterministicDFN.csv  Makefile  PT_parameters.csv
SomeApplications/CircuitLikeDFNParticleTrackingNoDiffusion/: Mesh_parameters.csv  PT_parameters.csv
SomeApplications/ClearBadH5FileForPercolationTest/: Makefile
SomeApplications/CompareCPUGPU/: Makefile
SomeApplications/CompareDFNworks/: example1_FracPara.csv
SomeApplications/CompareDFNworks_DFNGen/: Makefile
SomeApplications/CompareDFNworks_PT/: InputParametersForStochasticDFN.csv  example_FracPara_PercolativeFractures.csv
SomeApplications/CompareDFNworks_mesh_flow/: TestParallel.cpp  example_FracPara_AllFractures.csv
SomeApplications/ConnectivityMultipleFamilies/: Makefile
SomeApplications/ConvertH5Precision/: Makefile
SomeApplications/Demo_PercolationAnalyses_Conn_Permeab/: .gitignore  Chosen_rho_prime.csv  Makefile  RunLevel2.sh
SomeApplications/Diffusion3D/: InputParametersForStochasticDFN.csv  Mesh_parameters.csv  PT_ControlPlanes.csv  PT_parameters.csv
SomeApplications/Diffusion3D_Periodic/: Flow_parameters.csv  InputParametersForStochasticDFN.csv  PT_parameters.csv
SomeApplications/DispersionAtOneDensityValue/: Makefile
SomeApplications/Dispersion_Rho_increasing/: Makefile  run_test
SomeApplications/Dispersion_Rho_increasing_version_2_pseudo3D/: Makefile  run.sh
SomeApplications/IdenticalDFNDifferentPe/: Makefile
TestFunctionsOnlyForDevlopment/: CMakeLists.txt  DFN_.py  Test_warning.sh  particle2.m
TestResolutionEffect/: CMakeLists.txt  Makefile
TestResolutionEffect/src/: main.cu
Transform2DH5ParticleDataTo3D/: CMakeLists.txt  compileCode.sh
ValidateLocalDiffusion/: CMakeLists.txt
include/: cuDFNsys.cuh
lib/: CMakeLists.txt  SetPaths.cmake  compileCode.sh
sandbox/: CMakeLists.txt
src/: cuDFNsys.cu
(+291 files in other folders)
